BXMD-191 Feat: Add a new button "Load from Server" for the track
modified:   index.html
Add a new button to the dropmenu of the track.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
                             URL ...
                         </button>
 
+                        <!-- Load from Server -->
+                        <button class="dropdown-item" type="button" data-toggle="modal"
+                                data-target="#igv-app-track-from-url-modal">
+                            Load from Server
+                        </button>
+
                         <div id="igv-app-annotations-section" class="dropdown-divider">
                         </div>
 
