BXMD-191/BW-132/BW-133 Feat: Change the button context to Load from Project modified:   index.html
"Load from Server" to "Load from Project".

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <!-- Load from Server -->
                         <button class="dropdown-item" type="button" data-toggle="modal"
                                 data-target="#igv-app-track-from-server-modal">
-                            Load from Server
+                            Load from Project
                         </button>
 
                         <div id="igv-app-annotations-section" class="dropdown-divider">
